// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseOne matches snapshot for citizen with entitlement 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    data-name="viewWrapper"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexGrow": 1,
        "backgroundImage": "url(wrapperClaim.svg)",
        "backgroundPosition": "center top",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "448px",
        "flexGrow": 1,
        "marginTop": "-1px",
        "maxHeight": "844px",
        "msFlexPositive": 1,
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "5px",
          "borderBottomRightRadius": "5px",
          "borderTopLeftRadius": "5px",
          "borderTopRightRadius": "5px",
          "paddingBottom": "16px",
          "paddingLeft": "12px",
          "paddingRight": "12px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Universal

            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Basic Income
For All
            </span>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": 500,
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Total money generated today:
            </div>
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "30px",
                  "fontWeight": "700",
                  "lineHeight": "36px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitAlignItems": "baseline",
                    "WebkitBoxAlign": "baseline",
                    "WebkitBoxDirection": "normal",
                    "WebkitBoxOrient": "horizontal",
                    "WebkitFlexDirection": "row",
                    "alignItems": "baseline",
                    "display": "contents",
                    "flexDirection": "row",
                    "msFlexAlign": "baseline",
                    "msFlexDirection": "row",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "18px",
                        "fontWeight": "700",
                        "lineHeight": "24px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    G
                  </span>
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "17.5px",
                        "fontWeight": "700",
                        "lineHeight": "21px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    $
                  </span>
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                   
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(0,0,0,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "700",
                      "lineHeight": "22px",
                      "marginRight": "2px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  0.01
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "flexBasis": "auto",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"arrowsDown.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="arrowsDown.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxPack": "center",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(0,175,255,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "50%",
              "borderBottomRightRadius": "50%",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "50%",
              "borderTopRightRadius": "50%",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "display": "flex",
              "height": "196px",
              "justifyContent": "center",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "msFlexAlign": "center",
              "msFlexPack": "center",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "196px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "borderBottomLeftRadius": "50px",
                "borderBottomRightRadius": "50px",
                "borderTopLeftRadius": "50px",
                "borderTopRightRadius": "50px",
                "cursor": "pointer",
                "msTouchAction": "manipulation",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
                "touchAction": "manipulation",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitBoxPack": "center",
                  "WebkitFlexDirection": "row",
                  "WebkitJustifyContent": "center",
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "msFlexAlign": "center",
                  "msFlexDirection": "row",
                  "msFlexPack": "center",
                }
              }
            >
              <div
                className="css-text-901oao css-textOneLine-bfa6kz"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "letterSpacing": "1px",
                    "marginBottom": "9px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "9px",
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxFlex": 1,
                      "WebkitBoxOrient": "horizontal",
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexDirection": "row",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "alignItems": "center",
                      "display": "flex",
                      "flexBasis": "0%",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitAlignItems": "center",
                        "WebkitBoxAlign": "center",
                        "WebkitBoxPack": "center",
                        "WebkitJustifyContent": "center",
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "msFlexAlign": "center",
                        "msFlexPack": "center",
                      }
                    }
                  >
                    <span
                      className="css-text-901oao css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(12,38,61,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Roboto",
                          "fontSize": "16px",
                          "fontWeight": "500",
                          "lineHeight": "22px",
                          "textAlign": "center",
                          "textDecoration": "none",
                          "textTransform": "none",
                        }
                      }
                    >
                      Get your 
                    </span>
                    <span
                      className="css-text-901oao css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(12,38,61,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Roboto",
                          "fontSize": "16px",
                          "fontWeight": "500",
                          "lineHeight": "22px",
                          "textAlign": "center",
                          "textDecoration": "none",
                          "textTransform": "none",
                        }
                      }
                    >
                       free daily share:
                    </span>
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitAlignItems": "center",
                          "WebkitBoxAlign": "center",
                          "WebkitBoxDirection": "normal",
                          "WebkitBoxOrient": "horizontal",
                          "WebkitFlexDirection": "row",
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                          "msFlexAlign": "center",
                          "msFlexDirection": "row",
                        }
                      }
                    >
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "36px",
                            "marginRight": "2px",
                            "textAlign": "right",
                            "textDecoration": "none",
                            "textTransform": "none",
                          }
                        }
                      >
                        1
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(66,69,74,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto",
                            "fontSize": "16px",
                            "fontWeight": "normal",
                            "lineHeight": "22px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                          }
                        }
                      >
                        <span
                          className="css-text-901oao css-textHasAncestor-16my406"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(255,255,255,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto",
                              "fontSize": "16px",
                              "fontWeight": "500",
                              "lineHeight": "20px",
                              "textAlign": "right",
                              "textDecoration": "none",
                              "textTransform": "none",
                            }
                          }
                        >
                          G
                        </span>
                        <span
                          className="css-text-901oao css-textHasAncestor-16my406"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(255,255,255,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto",
                              "fontSize": "15.5px",
                              "fontWeight": "500",
                              "lineHeight": "20px",
                              "textAlign": "right",
                              "textDecoration": "none",
                              "textTransform": "none",
                            }
                          }
                        >
                          $
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        />
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "space-between",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "700",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              1
               
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              good people have claimed today!
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhaseOne matches snapshot for citizen without entitlement 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    data-name="viewWrapper"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexGrow": 1,
        "backgroundImage": "url(wrapperClaim.svg)",
        "backgroundPosition": "center top",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "448px",
        "flexGrow": 1,
        "marginTop": "-1px",
        "maxHeight": "844px",
        "msFlexPositive": 1,
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "5px",
          "borderBottomRightRadius": "5px",
          "borderTopLeftRadius": "5px",
          "borderTopRightRadius": "5px",
          "paddingBottom": "16px",
          "paddingLeft": "12px",
          "paddingRight": "12px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Universal

            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Basic Income
For All
            </span>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": 500,
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Total money generated today:
            </div>
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "30px",
                  "fontWeight": "700",
                  "lineHeight": "36px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitAlignItems": "baseline",
                    "WebkitBoxAlign": "baseline",
                    "WebkitBoxDirection": "normal",
                    "WebkitBoxOrient": "horizontal",
                    "WebkitFlexDirection": "row",
                    "alignItems": "baseline",
                    "display": "contents",
                    "flexDirection": "row",
                    "msFlexAlign": "baseline",
                    "msFlexDirection": "row",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "18px",
                        "fontWeight": "700",
                        "lineHeight": "24px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    G
                  </span>
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "17.5px",
                        "fontWeight": "700",
                        "lineHeight": "21px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    $
                  </span>
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                   
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(0,0,0,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "700",
                      "lineHeight": "22px",
                      "marginRight": "2px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  0.01
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "flexBasis": "auto",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"arrowsDown.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="arrowsDown.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "column",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "50%",
              "borderBottomRightRadius": "50%",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "50%",
              "borderTopRightRadius": "50%",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "display": "flex",
              "flexDirection": "column",
              "height": "196px",
              "justifyContent": "center",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "msFlexAlign": "center",
              "msFlexDirection": "column",
              "msFlexPack": "center",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "196px",
            }
          }
        >
          <div
            aria-disabled={true}
            className="css-view-1dbjc4n"
            disabled={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "borderBottomLeftRadius": "50px",
                "borderBottomRightRadius": "50px",
                "borderTopLeftRadius": "50px",
                "borderTopRightRadius": "50px",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitBoxPack": "center",
                  "WebkitFlexDirection": "row",
                  "WebkitJustifyContent": "center",
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "msFlexAlign": "center",
                  "msFlexDirection": "row",
                  "msFlexPack": "center",
                }
              }
            >
              <div
                className="css-text-901oao css-textOneLine-bfa6kz"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "letterSpacing": "1px",
                    "marginBottom": "9px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "9px",
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxFlex": 1,
                      "WebkitBoxOrient": "horizontal",
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexDirection": "row",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "alignItems": "center",
                      "display": "flex",
                      "flexBasis": "0%",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitBoxDirection": "normal",
                        "WebkitBoxOrient": "vertical",
                        "WebkitFlexDirection": "column",
                        "display": "inline-flex",
                        "flexDirection": "column",
                        "msFlexDirection": "column",
                      }
                    }
                  >
                    <span
                      className="css-text-901oao css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(66,69,74,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Roboto",
                          "fontSize": "16px",
                          "fontWeight": "700",
                          "letterSpacing": "0.08px",
                          "lineHeight": "22px",
                          "textAlign": "center",
                          "textDecoration": "none",
                          "textTransform": "none",
                        }
                      }
                    >
                      Your next daily claim:
                    </span>
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitAlignItems": "center",
                          "WebkitBoxAlign": "center",
                          "WebkitBoxDirection": "normal",
                          "WebkitBoxFlex": 1,
                          "WebkitBoxOrient": "horizontal",
                          "WebkitBoxPack": "center",
                          "WebkitFlexDirection": "row",
                          "WebkitFlexGrow": 1,
                          "WebkitJustifyContent": "center",
                          "alignItems": "center",
                          "display": "inline-flex",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "justifyContent": "center",
                          "msFlexAlign": "center",
                          "msFlexDirection": "row",
                          "msFlexPack": "center",
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        0
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        0
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "10px",
                          }
                        }
                      >
                        :
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        1
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        0
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "10px",
                          }
                        }
                      >
                        :
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        0
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto Slab",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "30px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                            "width": "25px",
                          }
                        }
                      >
                        0
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        />
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "space-between",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "700",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              1
               
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              good people have claimed today!
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhaseOne matches snapshot for non-citizen 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    data-name="viewWrapper"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexGrow": 1,
        "backgroundImage": "url(wrapperClaim.svg)",
        "backgroundPosition": "center top",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "448px",
        "flexGrow": 1,
        "marginTop": "-1px",
        "maxHeight": "844px",
        "msFlexPositive": 1,
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "5px",
          "borderBottomRightRadius": "5px",
          "borderTopLeftRadius": "5px",
          "borderTopRightRadius": "5px",
          "paddingBottom": "16px",
          "paddingLeft": "12px",
          "paddingRight": "12px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Universal

            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "40px",
                  "fontWeight": "700",
                  "lineHeight": "48px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Basic Income
For All
            </span>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": 500,
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Total money generated today:
            </div>
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(12,38,61,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "30px",
                  "fontWeight": "700",
                  "lineHeight": "36px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitAlignItems": "baseline",
                    "WebkitBoxAlign": "baseline",
                    "WebkitBoxDirection": "normal",
                    "WebkitBoxOrient": "horizontal",
                    "WebkitFlexDirection": "row",
                    "alignItems": "baseline",
                    "display": "contents",
                    "flexDirection": "row",
                    "msFlexAlign": "baseline",
                    "msFlexDirection": "row",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "18px",
                        "fontWeight": "700",
                        "lineHeight": "24px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    G
                  </span>
                  <span
                    className="css-text-901oao css-textHasAncestor-16my406"
                    dir="auto"
                    style={
                      Object {
                        "color": "rgba(0,0,0,1.00)",
                        "direction": "ltr",
                        "fontFamily": "Roboto",
                        "fontSize": "17.5px",
                        "fontWeight": "700",
                        "lineHeight": "21px",
                        "textAlign": "right",
                        "textDecoration": "none",
                        "textTransform": "none",
                      }
                    }
                  >
                    $
                  </span>
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(66,69,74,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "normal",
                      "lineHeight": "22px",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                   
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(0,0,0,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto",
                      "fontSize": "16px",
                      "fontWeight": "700",
                      "lineHeight": "22px",
                      "marginRight": "2px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  0.01
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "flexBasis": "auto",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"arrowsDown.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="arrowsDown.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxPack": "center",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(0,175,255,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "50%",
              "borderBottomRightRadius": "50%",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "50%",
              "borderTopRightRadius": "50%",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "display": "flex",
              "height": "196px",
              "justifyContent": "center",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "msFlexAlign": "center",
              "msFlexPack": "center",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "196px",
            }
          }
        >
          <div
            aria-disabled={true}
            className="css-view-1dbjc4n"
            disabled={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "borderBottomLeftRadius": "50px",
                "borderBottomRightRadius": "50px",
                "borderTopLeftRadius": "50px",
                "borderTopRightRadius": "50px",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitBoxPack": "center",
                  "WebkitFlexDirection": "row",
                  "WebkitJustifyContent": "center",
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "msFlexAlign": "center",
                  "msFlexDirection": "row",
                  "msFlexPack": "center",
                }
              }
            >
              <div
                className="css-text-901oao css-textOneLine-bfa6kz"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "letterSpacing": "1px",
                    "marginBottom": "9px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "9px",
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxFlex": 1,
                      "WebkitBoxOrient": "horizontal",
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexDirection": "row",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "alignItems": "center",
                      "display": "flex",
                      "flexBasis": "0%",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitAlignItems": "center",
                        "WebkitBoxAlign": "center",
                        "WebkitBoxPack": "center",
                        "WebkitJustifyContent": "center",
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "msFlexAlign": "center",
                        "msFlexPack": "center",
                      }
                    }
                  >
                    <span
                      className="css-text-901oao css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(12,38,61,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Roboto",
                          "fontSize": "16px",
                          "fontWeight": "500",
                          "lineHeight": "22px",
                          "textAlign": "center",
                          "textDecoration": "none",
                          "textTransform": "none",
                        }
                      }
                    >
                      Get your 
                    </span>
                    <span
                      className="css-text-901oao css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(12,38,61,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Roboto",
                          "fontSize": "16px",
                          "fontWeight": "500",
                          "lineHeight": "22px",
                          "textAlign": "center",
                          "textDecoration": "none",
                          "textTransform": "none",
                        }
                      }
                    >
                       free daily share:
                    </span>
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitAlignItems": "baseline",
                          "WebkitBoxAlign": "baseline",
                          "WebkitBoxDirection": "normal",
                          "WebkitBoxOrient": "horizontal",
                          "WebkitFlexDirection": "row",
                          "alignItems": "baseline",
                          "display": "flex",
                          "flexDirection": "row",
                          "msFlexAlign": "baseline",
                          "msFlexDirection": "row",
                        }
                      }
                    >
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(255,255,255,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto",
                            "fontSize": "36px",
                            "fontWeight": "700",
                            "lineHeight": "36px",
                            "marginRight": "2px",
                            "textAlign": "right",
                            "textDecoration": "none",
                            "textTransform": "none",
                          }
                        }
                      >
                        -.--
                      </span>
                      <span
                        className="css-text-901oao css-textHasAncestor-16my406"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(66,69,74,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto",
                            "fontSize": "16px",
                            "fontWeight": "normal",
                            "lineHeight": "22px",
                            "textAlign": "center",
                            "textDecoration": "none",
                            "textTransform": "none",
                          }
                        }
                      >
                        <span
                          className="css-text-901oao css-textHasAncestor-16my406"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(255,255,255,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto",
                              "fontSize": "16px",
                              "fontWeight": "500",
                              "lineHeight": "20px",
                              "textAlign": "right",
                              "textDecoration": "none",
                              "textTransform": "none",
                            }
                          }
                        >
                          G
                        </span>
                        <span
                          className="css-text-901oao css-textHasAncestor-16my406"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(255,255,255,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto",
                              "fontSize": "15.5px",
                              "fontWeight": "500",
                              "lineHeight": "20px",
                              "textAlign": "right",
                              "textDecoration": "none",
                              "textTransform": "none",
                            }
                          }
                        >
                          $
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "column",
            "WebkitJustifyContent": "space-between",
            "alignItems": "stretch",
            "flexDirection": "column",
            "justifyContent": "space-between",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
        />
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "space-between",
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "700",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              1
               
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              good people have claimed today!
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
